# clash-compiler

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .readthedocs.yml  .travis.meta.yml  .travis.yml  ARCHITECTURE.md  AUTHORS.md  AUTHORS.rst  BlinkerClockWizard.hs  CHANGELOG-bin.md  CHANGELOG-lib.md  CHANGELOG.md  CHANGELOG.rst  CLaSH.hs  CODE_OF_CONDUCT.md  Clash.hs  DOCUMENTATION_STYLE.md  HACKING.MD  HACKING.md  HACKING.rst  LICENSE  PlayClocks.hs  README.md  README.rst  RELEASING.md  STYLE.md  STYLE.rst  Setup.hs  Test.hs  bench.py  cabal.project  cabal.project.freeze  clash-cores.cabal  clash-dev  clash-dev.ps1  clash-ghc.cabal_  clash-lib.cabal_  clash-prelude.cabal  (+19 more)
benchmark/: benchmark-concurrency.hs  benchmark-normalization.hs  clash-benchmark.cabal
benchmark/common/: BenchmarkCommon.hs
benchmark/profiling/: README.profiling.md
benchmark/tests/: BundleMapRepeat.hs  ManyEntitiesEqual.hs  ManyEntitiesVaried.hs  PipelinesViaFolds.hs
clash-cores/: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  cabal.project  clash-cores.cabal  default.nix
clash-cores/doc/: linuwial-wrap-types.css
clash-cores/test/: doctests.hs  unittests.hs
clash-cosim/: .gitignore  .travis.yml  CoSimCLaSH.hs  CoSimTest.hs  LICENSE  Makefile  README.md  Setup.hs  cabal.project  clash-cosim.cabal  cosim_clash.c  cosim_vpi.c
clash-cosim/.travis/: install_iverilog.sh
clash-cosim/include/: vpi_compatibility.h
clash-cosim/process/: cosim_commands.c  cosim_process.c  cosim_process.h
clash-cosim/src/: CoSimCLaSH.hs  Paths_clash_cosim_.hs
clash-cosim/tests/: CoSimTest.hs  test.hs
clash-cosim/traversing/: cosim_traversing.h
clash-cosim/types/: cosim_types_vpi.c  cosim_types_vpi.h
clash-ffi/: .gitignore  LICENSE  README.md  clash-ffi.cabal
clash-ffi/cbits/: entry_vpi.c
clash-ffi/example/: Setup.hs  Simulate.hs  cabal.project  clash-ffi-example.cabal  run-iverilog.sh  run-vsim.sh
clash-ffi/include/: vpi_compatibility.h  vpi_user.h
clash-ffi/tests/: Main.hs
clash-ghc/: CHANGELOG.md  LICENSE  README.md  clash-ghc.cabal  default.nix
clash-ghc/cbits/: hschooks.c
clash-ghc/primitives/: CLaSH.Sized.Internal.Signed.json  GHC.Classes.json
clash-ghc/src-bin/: GhciMonad.hs  InteractiveUI.hs  Main.hs  hschooks.c
clash-ghc/src-ghc/: Batch.hs  Interactive.hs
clash-ghc/tests/: unittests.hs
clash-lib/: CHANGELOG.md  LICENSE  README.md  clash-lib.cabal  default.nix
clash-lib-hedgehog/: clash-lib-hedgehog.cabal  default.nix
clash-lib/src/: ClashDebug.h
clash-lib/tests/: doctests.hs  unittests.hs
clash-lib/tools/: BlackBoxSorting.hs  prim-yaml-to-inlineyaml.hs  static-files.hs  v16-upgrade-primitives.hs
clash-prelude/: AUTHORS.md  CHANGELOG.md  DumpSplice.hs  HACKING.MD  LICENSE  README.md  Setup.hs  clash-prelude.cabal  default.nix
clash-prelude-hedgehog/: LICENSE  clash-prelude-hedgehog.cabal  default.nix
clash-prelude/benchmarks/: BenchBitVector.hs  BenchCommon.hs  BenchFixed.hs  BenchRAM.hs  BenchSigned.hs  BenchUnsigned.hs  BenchVector.hs  benchmark-main.hs
clash-prelude/doc/: fold.graffle  foldl1.graffle  foldr.graffle  foldr1.graffle  generate.graffle  idDF.graffle  ifoldl.graffle  imap.graffle  iterate.graffle  izipWith.graffle  linuwial-wrap-types.css  loopDF.graffle  map.graffle  mapAccumL.graffle  mapAccumR.graffle  scanlPar.graffle  secondDF.graffle  sscanl.graffle  stepLock.graffle  swapDF.graffle  zipWith.graffle  zipWith3.graffle
clash-prelude/tests/: doctests.hs  unittests.hs
clash-shake/: LICENSE  clash-shake.cabal
clash-starters/clash-example-project/: .gitignore  LICENSE  README.md  Setup.hs  cabal.project  clash-example-project.cabal  hie.yaml  stack.yaml
clash-systemverilog/: CHANGELOG.md  README.md  clash-systemverilog.cabal
clash-systemverilog/primitives/: CLaSH.Driver.TestbenchGen.json  CLaSH.Driver.TopWrapper.json  CLaSH.Prelude.BlockRam.File.json  CLaSH.Prelude.BlockRam.json  CLaSH.Prelude.RAM.json  CLaSH.Prelude.ROM.File.json  CLaSH.Prelude.ROM.json  CLaSH.Prelude.Testbench.json  CLaSH.Promoted.Nat.json  CLaSH.Signal.Bundle.json  CLaSH.Signal.Explicit.json  CLaSH.Signal.Internal.json  CLaSH.Sized.Internal.BitVector.json  CLaSH.Sized.Internal.Index.json  CLaSH.Sized.Internal.Signed.json  CLaSH.Sized.Internal.Unsigned.json  CLaSH.Sized.RTree.json  CLaSH.Sized.Vector.json  CLaSH.TopWrapper.json  GHC.Base.json  GHC.CString.json  GHC.Classes.json  GHC.Err.json  GHC.Int.json  GHC.Integer.Type.json  GHC.Prim.json  GHC.Real.json  GHC.Typelits.json  GHC.Types.json  GHC.Word.json
clash-term/: LICENSE  Main.hs  README.md  clash-term.cabal  theme.ini
clash-testbench/: clash-testbench.cabal
clash-testbench/example/: Calculator.hs  LICENSE  Main.hs  Register.hs  RegisterFail.hs  cabal.project  clash-testbench-example.cabal  run-iverilog.sh
clash-verilog/: CHANGELOG.md  LICENSE  README.md  clash-verilog.cabal
clash-verilog/primitives/: CLaSH.Driver.TestbenchGen.json  CLaSH.Driver.TopWrapper.json  CLaSH.Prelude.BlockRam.File.json  CLaSH.Prelude.BlockRam.json  CLaSH.Prelude.RAM.json  CLaSH.Prelude.ROM.File.json  CLaSH.Prelude.ROM.json  CLaSH.Prelude.Testbench.json  CLaSH.Promoted.Nat.Unsafe.json  CLaSH.Promoted.Nat.json  CLaSH.Promoted.Symbol.json  CLaSH.Signal.Internal.json  CLaSH.Sized.Internal.BitVector.json  CLaSH.Sized.Internal.Index.json  CLaSH.Sized.Internal.Signed.json  CLaSH.Sized.Internal.Unsigned.json  CLaSH.Sized.RTree.json  CLaSH.Sized.Vector.json  CLaSH.XException.json  Control.Exception.Base.json  GHC.Base.json  GHC.CString.json  GHC.Classes.json  GHC.Err.json  GHC.IO.Exception.json  GHC.Integer.Type.json  GHC.Prim.json  GHC.Types.json
clash-vhdl/: CHANGELOG.md  LICENSE  README.md  clash-vhdl.cabal
clash-vhdl/primitives/: CLaSH.Driver.TestbenchGen.json  CLaSH.Driver.TopWrapper.json  CLaSH.Prelude.BlockRam.File.json  CLaSH.Prelude.RAM.json  (+21 more)
tests/: Main.hs  clash-testsuite.cabal  doctests.hs  doctests.hsc  failMyriadWays
testsuite/: LICENSE  Main.hs  clash-testsuite.cabal  ghdl_import.sh  partial-eval.hs
tmp-repro-packageid/: LocalTop.hs  LocalTopBBTF.hs  LocalTopPkgBBTF.hs  cabal.project  repro-packageid.cabal
(+2995 files in other folders)
