cabal-version:       >=1.10

name:                clash-cores
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Clash.Cores.SPI
                       Clash.Cores.LatticeSemi.IO
                       Clash.Cores.LatticeSemi.Blackboxes.IO
  -- other-modules:
  -- other-extensions:
  ghc-options:         -fexpose-all-unfoldings
                       -fplugin GHC.TypeLits.Extra.Solver
                       -fplugin GHC.TypeLits.Normalise
                       -fplugin GHC.TypeLits.KnownNat.Solver
                       -Wall
  default-extensions:  BinaryLiterals
                       DataKinds
                       DeriveAnyClass
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       MagicHash
                       NoImplicitPrelude
                       ScopedTypeVariables
                       TemplateHaskell
                       TypeApplications
                       TypeFamilies
                       TypeOperators
  build-depends:       base >=4.12 && <4.13,
                       clash-prelude >=1.0 && < 1.1,
                       clash-lib >=1.0 && < 1.1,
                       ghc-typelits-natnormalise >= 0.7,
                       ghc-typelits-extra >= 0.3.1,
                       ghc-typelits-knownnat >= 0.7,
                       mtl >= 2.1.1 && < 2.3,
                       reducers >= 3.12.2 && < 4.0,
                       text >= 1.2.2 && < 1.3

  hs-source-dirs:      src
  default-language:    Haskell2010
