Name:                clash
Version:             0.2
Synopsis:            CAES Language for Synchronous Hardware
-- Description:
Homepage:            http://clash.ewi.utwente.nl/
License:             BSD3
License-file:        LICENSE
Author:              Christiaan Baaij
Maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
Copyright:           (c)2012, University of Twente
Category:            Hardware
Build-type:          Simple

Extra-source-files:  README.md

Data-files:          primitives/ghc.base.json,
                     primitives/ghc.integer.type.json,
                     primitives/ghc.types.json

Cabal-version:       >=1.2

Library
  HS-Source-Dirs:      src

  extensions:          TemplateHaskell
  ghc-options:         -Wall -fwarn-tabs
  Cpp-options:         -DCABAL

  Exposed-modules:     CLaSH.Driver

  Build-depends:       aeson                >= 0.6.0.2   && < 0.7,
                       attoparsec           >= 0.10.2.0  && < 0.11,
                       base                 >= 4.3.1.0   && < 4.6,
                       bytestring           >= 0.9.2.1   && < 0.10,
                       concurrent-supply    >= 0.1.1     && < 0.2,
                       containers           >= 0.4.2.1   && < 0.5,
                       directory            >= 1.1.0.2   && < 1.2,
                       fclabels             >= 1.1.1.1   && < 1.2,
                       filepath             >= 1.3.0.0   && < 1.4,
                       ghc                  >= 7.4.1     && < 7.5,
                       ghc-paths            >= 0.1.0.8   && < 0.2,
                       hashable             >= 1.1.2.3   && < 1.2,
                       hastache             >= 0.3.3     && < 0.4,
                       mtl                  >= 2.0.1.0   && < 2.1,
                       pretty               >= 1.1.1.0   && < 1.2,
                       template-haskell     >= 2.7.0.0   && < 2.8,
                       text                 >= 0.11.1.13 && < 0.12,
                       transformers         >= 0.2.2.0   && < 0.3,
                       unbound              >= 0.4.0.2   && < 0.5,
                       unordered-containers >= 0.2.1.0   && < 0.3,
                       wl-pprint-text       >= 1.0.0.0   && < 1.1

  Other-modules:       CLaSH.Core.DataCon
                       CLaSH.Core.FreeVars
                       CLaSH.Core.Literal
                       CLaSH.Core.Pretty
                       CLaSH.Core.Prim
                       CLaSH.Core.Subst
                       CLaSH.Core.Term
                       CLaSH.Core.TyCon
                       CLaSH.Core.Type
                       CLaSH.Core.TypeRep
                       CLaSH.Core.TysPrim
                       CLaSH.Core.Util
                       CLaSH.Core.Var

                       CLaSH.Driver.PrepareBinding

                       CLaSH.GHC.GHC2Core
                       CLaSH.GHC.LoadInterfaceFiles
                       CLaSH.GHC.LoadModules

                       CLaSH.Netlist
                       CLaSH.Netlist.BlackBox
                       CLaSH.Netlist.Types
                       CLaSH.Netlist.Util
                       CLaSH.Netlist.VHDL

                       CLaSH.Normalize
                       CLaSH.Normalize.Strategy
                       CLaSH.Normalize.Transformations
                       CLaSH.Normalize.Types
                       CLaSH.Normalize.Util

                       CLaSH.Primitives.Types
                       CLaSH.Primitives.Util

                       CLaSH.Rewrite.Combinators
                       CLaSH.Rewrite.Types
                       CLaSH.Rewrite.Util

                       CLaSH.Util

                       Paths_clash
