Name:                clash
Version:             0.2
Synopsis:            CAES Language for Synchronous Hardware
-- Description:
Homepage:            http://clash.ewi.utwente.nl/
bug-reports:         http://github.com/christiaanb/clash2/issues
License:             BSD3
License-file:        LICENSE
Author:              Christiaan Baaij
Maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
Copyright:           Copyright (C) 2012 University of Twente
Category:            Hardware
Build-type:          Simple

Extra-source-files:  README.md

Data-files:          primitives/clash.bit.json,
                     primitives/clash.prelude.json,
                     primitives/clash.signal.json,
                     primitives/clash.sized.signed.json,
                     primitives/clash.sized.unsigned.json,
                     primitives/clash.sized.vectorz.json,
                     primitives/ghc.base.json,
                     primitives/ghc.classes.json,
                     primitives/ghc.err.json,
                     primitives/ghc.integer.type.json,
                     primitives/ghc.typelits.json,
                     primitives/ghc.types.json,
                     primitives/unsafe.coerce.json

Cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/christiaanb/clash2.git

Library
  HS-Source-Dirs:      src src-prelude

  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options:         -Wall -fwarn-tabs
  Cpp-options:         -DCABAL

  Exposed-modules:     CLaSH.Bit
                       CLaSH.Class.BitVector
                       CLaSH.Class.Default
                       CLaSH.Driver
                       CLaSH.Prelude
                       CLaSH.Promoted.Bool
                       CLaSH.Promoted.Ord
                       CLaSH.Signal
                       CLaSH.Sized.Index
                       CLaSH.Sized.Signed
                       CLaSH.Sized.Unsigned
                       CLaSH.Sized.VectorZ

  Build-depends:       aeson                >= 0.6.0.2,
                       attoparsec           >= 0.10.2.0,
                       base                 >= 4.3.1.0,
                       bytestring           >= 0.9.2.1,
                       concurrent-supply    >= 0.1.3,
                       containers           >= 0.4.2.1,
                       directory            >= 1.1.0.2,
                       errors               >= 1.4.1,
                       filepath             >= 1.3.0.0,
                       ghc                  >= 7.4.1 && < 7.9,
                       ghc-paths            >= 0.1.0.8,
                       hashable             >= 1.1.2.3,
                       lens                 >= 3.7.1,
                       listlike-instances   >= 0.2.3.1,
                       mtl                  >= 2.0.1.0,
                       pretty               >= 1.1.1.0,
                       template-haskell     >= 2.7.0.0,
                       text                 >= 0.11.1.13,
                       time                 >= 1.4.0.2,
                       transformers         >= 0.2.2.0,
                       unbound              >= 0.4.0.2,
                       unordered-containers >= 0.2.1.0,
                       uu-parsinglib        >= 2.7.4,
                       wl-pprint-text       >= 1.0.0.0

  Other-modules:       CLaSH.Core.DataCon
                       CLaSH.Core.FreeVars
                       CLaSH.Core.Literal
                       CLaSH.Core.Pretty
                       CLaSH.Core.Prim
                       CLaSH.Core.Subst
                       CLaSH.Core.Term
                       CLaSH.Core.TyCon
                       CLaSH.Core.Type
                       CLaSH.Core.TysPrim
                       CLaSH.Core.Util
                       CLaSH.Core.Var

                       CLaSH.Driver.PrepareBinding
                       CLaSH.Driver.TestbenchGen
                       CLaSH.Driver.Types

                       CLaSH.GHC.Compat.CoreSyn
                       CLaSH.GHC.Compat.DynFlags
                       CLaSH.GHC.Compat.FastString
                       CLaSH.GHC.Compat.GHC
                       CLaSH.GHC.Compat.Outputable
                       CLaSH.GHC.Compat.PrelNames
                       CLaSH.GHC.Compat.TyCon
                       CLaSH.GHC.GHC2Core
                       CLaSH.GHC.LoadInterfaceFiles
                       CLaSH.GHC.LoadModules
                       CLaSH.GHC.Types

                       CLaSH.Netlist
                       CLaSH.Netlist.BlackBox
                       CLaSH.Netlist.BlackBox.Parser
                       CLaSH.Netlist.BlackBox.Types
                       CLaSH.Netlist.BlackBox.Util
                       CLaSH.Netlist.Id
                       CLaSH.Netlist.Types
                       CLaSH.Netlist.Util
                       CLaSH.Netlist.VHDL

                       CLaSH.Normalize
                       CLaSH.Normalize.Strategy
                       CLaSH.Normalize.Transformations
                       CLaSH.Normalize.Types
                       CLaSH.Normalize.Util

                       CLaSH.Primitives.Types
                       CLaSH.Primitives.Util

                       CLaSH.Rewrite.Combinators
                       CLaSH.Rewrite.Types
                       CLaSH.Rewrite.Util

                       CLaSH.Util

                       Paths_clash
